; ModuleID = '/home/carl/AnghaBench/linux/drivers/video/fbdev/extr_cyber2000fb.c_cyberpro_pci_resume.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/video/fbdev/extr_cyber2000fb.c_cyberpro_pci_resume.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pci_dev = type { i32 }
%struct.cfb_info = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.pci_dev*)* @cyberpro_pci_resume to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cyberpro_pci_resume(%struct.pci_dev* %0) #0 {
  %2 = alloca %struct.pci_dev*, align 8
  %3 = alloca %struct.cfb_info*, align 8
  store %struct.pci_dev* %0, %struct.pci_dev** %2, align 8
  %4 = load %struct.pci_dev*, %struct.pci_dev** %2, align 8
  %5 = call %struct.cfb_info* @pci_get_drvdata(%struct.pci_dev* %4)
  store %struct.cfb_info* %5, %struct.cfb_info** %3, align 8
  %6 = load %struct.cfb_info*, %struct.cfb_info** %3, align 8
  %7 = icmp ne %struct.cfb_info* %6, null
  br i1 %7, label %8, label %13

8:                                                ; preds = %1
  %9 = load %struct.cfb_info*, %struct.cfb_info** %3, align 8
  %10 = call i32 @cyberpro_pci_enable_mmio(%struct.cfb_info* %9)
  %11 = load %struct.cfb_info*, %struct.cfb_info** %3, align 8
  %12 = call i32 @cyberpro_common_resume(%struct.cfb_info* %11)
  br label %13

13:                                               ; preds = %8, %1
  ret i32 0
}

declare dso_local %struct.cfb_info* @pci_get_drvdata(%struct.pci_dev*) #1

declare dso_local i32 @cyberpro_pci_enable_mmio(%struct.cfb_info*) #1

declare dso_local i32 @cyberpro_common_resume(%struct.cfb_info*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
